add create-user-session api
